force-app/main/default/objects/Contract_Integration_Log__c/Contract_Integration_Log__c.object-meta.xml
<CustomObject>
    <label>Contract Integration Log</label>
    <nameField>
        <displayFormat>CIL-{0000}</displayFormat>
        <label>Contract Integration Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Integration Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>