force-app/main/default/objects/Contract_Integration_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contract Integration Log</relationshipLabel>
    <relationshipName>Contract_Integration_Log</relationshipName>
    <type>Lookup</type>
</CustomField>